実績リストのスタイルを改善し、レスポンシブデザインを強化

--- a/index.html
+++ b/index.html
@@ -192,63 +192,152 @@
         </h2>
 
         <!-- 実績リスト -->
-        <div class="max-w-4xl mx-auto mb-16">
-          <ul class="grid md:grid-cols-2 gap-4 text-gray-700">
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              渋谷宇田川町 商業ビル開発プロジェクト
+        <div class="max-w-6xl mx-auto mb-16">
+          <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-700">
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">渋谷宇田川町</div>
+                <div class="text-sm text-gray-600">
+                  商業ビル開発プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              月島２丁目 長屋再開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">月島２丁目</div>
+                <div class="text-sm text-gray-600">長屋再開発プロジェクト</div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              両国 町工場再開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">両国</div>
+                <div class="text-sm text-gray-600">
+                  町工場再開発プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              銀座７丁目 ホテル開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">銀座７丁目</div>
+                <div class="text-sm text-gray-600">ホテル開発プロジェクト</div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              世田谷砧テラス デザイナーマンション再生プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">世田谷砧テラス</div>
+                <div class="text-sm text-gray-600">
+                  デザイナーマンション再生プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              神宮前商業ビル 原宿駅前ビルプロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">神宮前商業ビル</div>
+                <div class="text-sm text-gray-600">
+                  原宿駅前ビルプロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              東京スカイツリー 賃貸マション開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">東京スカイツリー</div>
+                <div class="text-sm text-gray-600">
+                  賃貸マション開発プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              石垣島 リゾートホテル開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">石垣島</div>
+                <div class="text-sm text-gray-600">
+                  リゾートホテル開発プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              八戸再開発 マンション・商業施設・ホテル複合ビル開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">八戸再開発</div>
+                <div class="text-sm text-gray-600">
+                  マンション・商業施設・ホテル複合ビル開発プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              上尾市原市 物流倉庫建設プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">上尾市原市</div>
+                <div class="text-sm text-gray-600">
+                  物流倉庫建設プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              上尾市緑 物流倉庫再生プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">上尾市緑</div>
+                <div class="text-sm text-gray-600">
+                  物流倉庫再生プロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              東浦和１・２ 戸建開発プロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">東浦和１・２</div>
+                <div class="text-sm text-gray-600">戸建開発プロジェクト</div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              南房総 鴨川 シーサイドリゾートマンションプロジェクト
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">南房総 鴨川</div>
+                <div class="text-sm text-gray-600">
+                  シーサイドリゾートマンションプロジェクト
+                </div>
+              </div>
             </li>
-            <li class="flex items-start">
-              <span class="text-blue-600 mr-2">•</span>
-              その他多数
+            <li
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+            >
+              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
+              <div class="text-center md:text-left">
+                <div class="font-medium text-gray-800">その他多数</div>
+              </div>
             </li>
           </ul>
         </div>
