ロビの画像を縦割りに変更OK-画像表示のスタイルを変更し、レイアウトをフレックスボックスに更新。画像サイズを調整し、可読性を向上。

--- a/index.html
+++ b/index.html
@@ -546,16 +546,16 @@
                 class="glightbox"
                 data-description="コミュニケーションロボット：ロビ君"
               >
-                <div class="relative">
+                <div class="flex">
                   <img
                     src="gazou/office_robi_01.jpg"
                     alt="オフィス ロビ君1"
-                    class="w-full h-32 object-cover"
+                    class="w-1/2 h-64 object-cover"
                   />
                   <img
                     src="gazou/office_robi_02.jpg"
                     alt="オフィス ロビ君2"
-                    class="w-full h-32 object-cover"
+                    class="w-1/2 h-64 object-cover"
                   />
                 </div>
               </a>
