取引実績の四角の高さを揃えた-リストアイテムの高さを統一し、可読性を向上させるためにCSSクラスに'h-24'を追加しました。これにより、各リストアイテムの表示が一貫性を持つようになりました。

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="max-w-6xl mx-auto mb-16">
           <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-700">
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -206,7 +206,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -215,7 +215,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -226,7 +226,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -235,7 +235,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -246,7 +246,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -257,7 +257,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -268,7 +268,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -279,7 +279,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -290,7 +290,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -301,7 +301,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -312,7 +312,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -321,7 +321,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
@@ -332,7 +332,7 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow"
+              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
               <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
               <div class="text-center md:text-left">
