トップコピーなど修正済み

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/earlyaccess/kokoro.css"
+      rel="stylesheet"
+    />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -37,6 +41,14 @@
     <style>
       body {
         font-family: "Zen Kaku Gothic New", sans-serif;
+      }
+
+      .kokoro-font {
+        font-family: "Kokoro", cursive;
+      }
+
+      .kokoro-font strong {
+        font-weight: 300;
       }
 
       .fade-in {
@@ -177,9 +189,12 @@
       <div class="absolute inset-0 bg-black bg-opacity-40"></div>
       <div class="relative z-10 text-center px-4">
         <h1
-          class="text-3xl md:text-5xl lg:text-6xl font-bold text-white text-shadow max-w-4xl mx-auto leading-tight"
+          class="text-3xl md:text-5xl lg:text-6xl font-bold text-white text-shadow max-w-4xl mx-auto leading-relaxed md:leading-relaxed lg:leading-relaxed kokoro-font"
         >
-          株式会社ケイツーコーポレーションは、不動産ビジネスのあらゆる分野で皆様のお手伝いができる会社を目指しています。
+          <strong>不動産</strong>ビジネスの<br />
+          あらゆる<strong>分野</strong>で<br />
+          <strong>皆様</strong>のお<strong>手伝</strong>いができる<br />
+          <strong>会社</strong>を<strong>目指</strong>して
         </h1>
       </div>
     </section>
@@ -388,7 +403,8 @@
             <!-- プロジェクト名 -->
             <div class="flex-1 text-center lg:text-left">
               <h4 class="text-2xl font-bold text-gray-800 mb-4">
-                南房総 鴨川 シーサイドリゾートマンションプロジェクト
+                南房総 鴨川 シーサイドリゾート<br />
+                マンションプロジェクト
               </h4>
               <p class="text-gray-600 leading-relaxed">
                 海を望む絶景の地で実現した、高級リゾートマンション開発プロジェクト。
