リストアイテムのテキスト配置を中央揃えに変更し、可読性を向上させました。これにより、各プロジェクトの情報がより見やすくなりました。

--- a/index.html
+++ b/index.html
@@ -210,10 +210,9 @@
         <div class="max-w-6xl mx-auto mb-16">
           <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-700">
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">渋谷宇田川町</div>
                 <div class="text-sm text-gray-600">
                   商業ビル開発プロジェクト
@@ -221,19 +220,17 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">月島２丁目</div>
                 <div class="text-sm text-gray-600">長屋再開発プロジェクト</div>
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">両国</div>
                 <div class="text-sm text-gray-600">
                   町工場再開発プロジェクト
@@ -241,19 +238,17 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">銀座７丁目</div>
                 <div class="text-sm text-gray-600">ホテル開発プロジェクト</div>
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">世田谷砧テラス</div>
                 <div class="text-sm text-gray-600">
                   デザイナーマンション再生プロジェクト
@@ -261,10 +256,9 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">神宮前商業ビル</div>
                 <div class="text-sm text-gray-600">
                   原宿駅前ビルプロジェクト
@@ -272,10 +266,9 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">東京スカイツリー</div>
                 <div class="text-sm text-gray-600">
                   賃貸マション開発プロジェクト
@@ -283,10 +276,9 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">石垣島</div>
                 <div class="text-sm text-gray-600">
                   リゾートホテル開発プロジェクト
@@ -294,21 +286,20 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">八戸再開発</div>
                 <div class="text-sm text-gray-600">
-                  マンション・商業施設・ホテル複合ビル開発プロジェクト
+                  マンション・商業施設・ホテル複合ビル<br />
+                  開発プロジェクト
                 </div>
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">上尾市原市</div>
                 <div class="text-sm text-gray-600">
                   物流倉庫建設プロジェクト
@@ -316,10 +307,9 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">上尾市緑</div>
                 <div class="text-sm text-gray-600">
                   物流倉庫再生プロジェクト
@@ -327,19 +317,17 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">東浦和１・２</div>
                 <div class="text-sm text-gray-600">戸建開発プロジェクト</div>
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">南房総 鴨川</div>
                 <div class="text-sm text-gray-600">
                   シーサイドリゾートマンションプロジェクト
@@ -347,10 +335,9 @@
               </div>
             </li>
             <li
-              class="flex items-start bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
+              class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow h-24"
             >
-              <span class="text-blue-600 mr-3 mt-1 flex-shrink-0">•</span>
-              <div class="text-center md:text-left">
+              <div class="text-center">
                 <div class="font-medium text-gray-800">その他多数</div>
               </div>
             </li>
