画像ファイルのリンクを更新しました。'office_flowers.jpg'、'office_allislove.jpg'、および'office_islandcruise.jpg'のリンクをそれぞれ'office_flowers_s.jpg'、'office_allislove_s.jpg'、'office_islandcruise_s.jpg'に変更し、画像のバリエーションを反映させました。

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <!-- カード1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <a
-                href="gazou/office_flowers.jpg"
+                href="gazou/office_flowers_s.jpg"
                 class="glightbox"
                 data-description="ギター： FENDER CUSTUMSHOP 93年ストラトキャスター<br>アンプ： 75年FENDER VIBROCHAMP<br>シルクスクリーン：アンディ・ウォーホル「 FLOWERS 」（ SUNDAYMORNINIGプリント）"
               >
@@ -507,7 +507,7 @@
             <!-- カード2 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <a
-                href="gazou/office_allislove.jpg"
+                href="gazou/office_allislove_s.jpg"
                 class="glightbox"
                 data-description="シルクスクリーン： マッケンジー・ソープ「 ALL IS LOVE 」"
               >
@@ -526,7 +526,7 @@
             <!-- カード3 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <a
-                href="gazou/office_islandcruise.jpg"
+                href="gazou/office_islandcruise_s.jpg"
                 class="glightbox"
                 data-description="シルクスクリーン： 鈴木英人「アイランドクルーズ」"
               >
