index.htmlのレイアウトを更新し、テキスト部分と画像部分をフレックスボックスで配置しました。これにより、コンテンツの可読性が向上しました。また、新しい画像ファイル'tanaka02.jpg'を追加し、ビジュアルコンテンツを強化しました。

--- a/index.html
+++ b/index.html
@@ -411,20 +411,33 @@
         </h2>
         <div class="max-w-4xl mx-auto">
           <div
-            class="prose prose-lg mx-auto text-gray-700 leading-relaxed space-y-6"
+            class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
           >
-            <p>
-              株式会社ケイツーコーポレーションは、2005年に設立以来、皆様の不動産ビジネスパートナーとなるべく歩んで参りました。
-            </p>
-            <p>
-              その間に、リーマンショック・東日本大震災やコロナ流行などの経済的、国家的な危機を、皆様に多大なご支援を頂きながら乗り越えることが出来ました。
-            </p>
-            <p>
-              またこれまでの多くの皆様との仕事を経て、少しずつ成長できたのではないかと日々感謝しております。
-            </p>
-            <p>
-              これからも持ち前の足回りの良さを武器として、不動産ビジネスのあらゆる分野でみなさまのお手伝いができる会社をめざし、日々努力して参ります。
-            </p>
+            <!-- テキスト部分 -->
+            <div
+              class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+            >
+              <p>
+                株式会社ケイツーコーポレーションは、2005年に設立以来、皆様の不動産ビジネスパートナーとなるべく歩んで参りました。
+              </p>
+              <p>
+                その間に、リーマンショック・東日本大震災やコロナ流行などの経済的、国家的な危機を、皆様に多大なご支援を頂きながら乗り越えることが出来ました。
+              </p>
+              <p>
+                またこれまでの多くの皆様との仕事を経て、少しずつ成長できたのではないかと日々感謝しております。
+              </p>
+              <p>
+                これからも持ち前の足回りの良さを武器として、不動産ビジネスのあらゆる分野でみなさまのお手伝いができる会社をめざし、日々努力して参ります。
+              </p>
+            </div>
+            <!-- 画像部分 -->
+            <div class="flex-1 flex justify-center md:justify-end h-full">
+              <img
+                src="gazou/tanaka.jpg"
+                alt="代表写真"
+                class="rounded-lg shadow-lg max-h-[350px] max-w-xs w-full h-auto object-contain"
+              />
+            </div>
           </div>
         </div>
       </div>
