index.htmlに経歴セクションを追加し、代表取締役のメッセージを挿入しました。また、画像を新しい'tanaka02.jpg'に更新し、ビジュアルコンテンツを強化しました。

--- a/index.html
+++ b/index.html
@@ -429,15 +429,39 @@
               <p>
                 これからも持ち前の足回りの良さを武器として、不動産ビジネスのあらゆる分野でみなさまのお手伝いができる会社をめざし、日々努力して参ります。
               </p>
+              <p>
+                STAY HUNGRY. STAY FOOLISH.<br />
+                代表取締役　田中恭二
+              </p>
             </div>
             <!-- 画像部分 -->
             <div class="flex-1 flex justify-center md:justify-end h-full">
-              <img
-                src="gazou/tanaka.jpg"
-                alt="代表写真"
-                class="rounded-lg shadow-lg max-h-[350px] max-w-xs w-full h-auto object-contain"
-              />
+              <div class="max-w-sm w-full">
+                <img
+                  src="gazou/tanaka02.jpg"
+                  alt="代表写真"
+                  class="rounded-lg shadow-lg max-h-[450px] max-w-sm w-full h-auto object-contain"
+                />
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <!-- 経歴 (Career) -->
+    <section id="career" class="py-20 bg-gray-50 fade-in">
+      <div class="container mx-auto px-4">
+        <h2 class="text-4xl font-bold text-center text-gray-800 mb-16">
+          経歴
+        </h2>
+        <div class="max-w-2xl mx-auto">
+          <div class="text-left space-y-4 text-gray-700 mx-auto" style="max-width: 28rem;">
+            <p>■東京都江戸川区生まれ</p>
+            <p>■昭和62年　明治大学法学部法律学科卒業</p>
+            <p>■株式会社リクルートコスモス（現コスモスイニシア）入社<br />
+            　一貫して土地の購入・開発部門在籍</p>
+            <p>■平成17年　同社退職　当社設立</p>
           </div>
         </div>
       </div>
