--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>株式会社ケイツーコーポレーション</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="gazou/favicon_k2.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
