--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>株式会社ケイツーコーポレーション</title>
-    
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="gazou/favicon_k2.png" />
 
@@ -453,19 +453,22 @@
         </div>
       </div>
     </section>
-    
+
     <!-- 経歴 (Career) -->
     <section id="career" class="py-20 bg-gray-50 fade-in">
       <div class="container mx-auto px-4">
-        <h2 class="text-4xl font-bold text-center text-gray-800 mb-16">
-          経歴
-        </h2>
+        <h2 class="text-4xl font-bold text-center text-gray-800 mb-16">経歴</h2>
         <div class="max-w-2xl mx-auto">
-          <div class="text-left space-y-4 text-gray-700 mx-auto" style="max-width: 28rem;">
+          <div
+            class="text-left space-y-4 text-gray-700 mx-auto"
+            style="max-width: 28rem"
+          >
             <p>■東京都江戸川区生まれ</p>
             <p>■昭和62年　明治大学法学部法律学科卒業</p>
-            <p>■株式会社リクルートコスモス（現コスモスイニシア）入社<br />
-            　一貫して土地の購入・開発部門在籍</p>
+            <p>
+              ■株式会社リクルートコスモス（現コスモスイニシア）入社<br />
+              　一貫して土地の購入・開発部門在籍
+            </p>
             <p>■平成17年　同社退職　当社設立</p>
           </div>
         </div>
@@ -509,6 +512,102 @@
                   <strong>FAX</strong> 03-3526-2286
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- お問い合わせ (Contact) -->
+    <section id="contact" class="py-20 bg-gray-50 fade-in">
+      <div class="container mx-auto px-4">
+        <h2 class="text-4xl font-bold text-center text-gray-800 mb-16">
+          お問い合わせ
+        </h2>
+        <div class="max-w-2xl mx-auto">
+          <form id="contact-form" class="space-y-6">
+            <div>
+              <label
+                for="name"
+                class="block text-sm font-medium text-gray-700 mb-2"
+                >お名前 <span class="text-red-500">*</span></label
+              >
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+              />
+            </div>
+
+            <div>
+              <label
+                for="email"
+                class="block text-sm font-medium text-gray-700 mb-2"
+                >メールアドレス <span class="text-red-500">*</span></label
+              >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                required
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+              />
+            </div>
+
+            <div>
+              <label
+                for="phone"
+                class="block text-sm font-medium text-gray-700 mb-2"
+                >お電話番号</label
+              >
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+              />
+            </div>
+
+            <div>
+              <label
+                for="message"
+                class="block text-sm font-medium text-gray-700 mb-2"
+                >お問い合わせ内容 <span class="text-red-500">*</span></label
+              >
+              <textarea
+                id="message"
+                name="message"
+                rows="6"
+                required
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+              ></textarea>
+            </div>
+
+            <button
+              type="submit"
+              class="w-full bg-blue-600 text-white py-3 px-6 rounded-lg font-medium hover:bg-blue-700 transition-colors"
+            >
+              送信する
+            </button>
+          </form>
+
+          <!-- 送信成功メッセージ -->
+          <div id="success-message" class="hidden text-center py-8">
+            <div
+              class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded-lg"
+            >
+              お問い合わせありがとうございました。メッセージは正常に送信されました。
+            </div>
+          </div>
+
+          <!-- エラーメッセージ -->
+          <div id="error-message" class="hidden text-center py-8">
+            <div
+              class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-lg"
+            >
+              送信に失敗しました。時間をおいて再度お試しください。
             </div>
           </div>
         </div>
@@ -614,102 +713,6 @@
       </div>
     </section>
 
-    <!-- お問い合わせ (Contact) -->
-    <section id="contact" class="py-20 bg-gray-50 fade-in">
-      <div class="container mx-auto px-4">
-        <h2 class="text-4xl font-bold text-center text-gray-800 mb-16">
-          お問い合わせ
-        </h2>
-        <div class="max-w-2xl mx-auto">
-          <form id="contact-form" class="space-y-6">
-            <div>
-              <label
-                for="name"
-                class="block text-sm font-medium text-gray-700 mb-2"
-                >お名前 <span class="text-red-500">*</span></label
-              >
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-              />
-            </div>
-
-            <div>
-              <label
-                for="email"
-                class="block text-sm font-medium text-gray-700 mb-2"
-                >メールアドレス <span class="text-red-500">*</span></label
-              >
-              <input
-                type="email"
-                id="email"
-                name="email"
-                required
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-              />
-            </div>
-
-            <div>
-              <label
-                for="phone"
-                class="block text-sm font-medium text-gray-700 mb-2"
-                >お電話番号</label
-              >
-              <input
-                type="tel"
-                id="phone"
-                name="phone"
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-              />
-            </div>
-
-            <div>
-              <label
-                for="message"
-                class="block text-sm font-medium text-gray-700 mb-2"
-                >お問い合わせ内容 <span class="text-red-500">*</span></label
-              >
-              <textarea
-                id="message"
-                name="message"
-                rows="6"
-                required
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-              ></textarea>
-            </div>
-
-            <button
-              type="submit"
-              class="w-full bg-blue-600 text-white py-3 px-6 rounded-lg font-medium hover:bg-blue-700 transition-colors"
-            >
-              送信する
-            </button>
-          </form>
-
-          <!-- 送信成功メッセージ -->
-          <div id="success-message" class="hidden text-center py-8">
-            <div
-              class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded-lg"
-            >
-              お問い合わせありがとうございました。メッセージは正常に送信されました。
-            </div>
-          </div>
-
-          <!-- エラーメッセージ -->
-          <div id="error-message" class="hidden text-center py-8">
-            <div
-              class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-lg"
-            >
-              送信に失敗しました。時間をおいて再度お試しください。
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- フッター (Footer) -->
     <footer class="bg-gray-800 text-white py-8">
       <div class="container mx-auto px-4 text-center">
@@ -793,16 +796,13 @@
 
           try {
             const formData = new FormData(form);
-                          const response = await fetch(
-                "https://formspree.io/f/mdkzvwer",
-              {
-                method: "POST",
-                body: formData,
-                headers: {
-                  Accept: "application/json",
-                },
-              }
-            );
+            const response = await fetch("https://formspree.io/f/mdkzvwer", {
+              method: "POST",
+              body: formData,
+              headers: {
+                Accept: "application/json",
+              },
+            });
 
             if (response.ok) {
               // 成功時
