01_再開発ページ追加_調整必要

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- 共通CSS -->
+    <link rel="stylesheet" href="common.css" />
+
     <!-- GLightbox -->
     <link
       rel="stylesheet"
@@ -472,6 +475,26 @@
             <p>■平成17年　同社退職　当社設立</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- 再開発事業のお手伝い（新規追加セクション） -->
+    <section class="py-20 bg-blue-50 fade-in">
+      <div class="container mx-auto px-4 text-center">
+        <h2 class="text-4xl font-bold text-blue-900 mb-8">
+          再開発事業のお手伝い
+        </h2>
+        <p class="text-lg text-gray-700 mb-8">
+          地域の再開発や資産価値向上にご興味のある方へ、<br
+            class="hidden md:inline"
+          />当社がサポートできる内容をまとめた特設ページをご用意しました。
+        </p>
+        <a
+          href="saikaihatu.html"
+          class="inline-block bg-blue-600 text-white text-xl font-semibold px-8 py-4 rounded-lg shadow-lg hover:bg-blue-700 transition-colors"
+        >
+          再開発パンフレットを見る
+        </a>
       </div>
     </section>
 
