整理中。次は再開発ページにメニューを付ける

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
               >メッセージ</a
             >
             <a
+              href="saikaihatu.html"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >再開発事業</a
+            >
+            <a
               href="#access"
               class="text-gray-700 hover:text-blue-600 transition-colors"
               >アクセス</a
@@ -167,6 +172,11 @@
               href="#message"
               class="text-gray-700 hover:text-blue-600 transition-colors"
               >メッセージ</a
+            >
+            <a
+              href="saikaihatu.html"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >再開発事業</a
             >
             <a
               href="#access"
@@ -479,7 +489,10 @@
     </section>
 
     <!-- 再開発事業のお手伝い（新規追加セクション） -->
-    <section class="py-20 bg-blue-50 fade-in">
+    <section
+      class="bg-blue-50 fade-in"
+      style="padding-top: 5.5rem; padding-bottom: 5.5rem"
+    >
       <div class="container mx-auto px-4 text-center">
         <h2 class="text-4xl font-bold text-blue-900 mb-8">
           再開発事業のお手伝い
