--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -79,35 +79,6 @@
         </div>
       </section>
 
-      <!-- 再開発全体の流れ -->
-      <section>
-        <h2>再開発全体の流れ</h2>
-        <div class="process-flow">
-          <div class="process-step">
-            <h3>皆様のご意向確認</h3>
-          </div>
-          <div class="process-step">
-            <h3>計画範囲の決定</h3>
-          </div>
-          <div class="process-step">
-            <h3>金額等条件面でのご調整</h3>
-          </div>
-          <div class="process-step">
-            <h3>個別にご売買契約を締結</h3>
-          </div>
-        </div>
-        <p>
-          <strong
-            >※計画範囲の全ての方とのご売買契約が成立した場合のみ契約は有効となります。</strong
-          >
-        </p>
-        <p>
-          <strong
-            >※弊社または弊社の提携会社が直接購入しますので余計な手数料もかかりません。</strong
-          >
-        </p>
-      </section>
-
       <!-- 再開発とは -->
       <section>
         <h2>再開発とは</h2>
@@ -161,17 +132,33 @@
         </p>
       </section>
 
-      <!-- 再開発を行う事で得られるメリット -->
+      <!-- 再開発全体の流れ -->
       <section>
-        <h2>再開発を行う事で得られるメリット</h2>
-        <ul>
-          <li>
-            建物の耐震化・安全性の向上により、防災機能を高め治安の良い街づくりに貢献する事が出来ます。
-          </li>
-          <li>
-            近隣の方々と併せて土地を売却する事で、敷地全体の資産価値が向上する可能性があり、その恩恵を受ける事が出来ます。
-          </li>
-        </ul>
+        <h2>再開発全体の流れ</h2>
+        <div class="process-flow">
+          <div class="process-step">
+            <h3>皆様のご意向確認</h3>
+          </div>
+          <div class="process-step">
+            <h3>計画範囲の決定</h3>
+          </div>
+          <div class="process-step">
+            <h3>金額等条件面でのご調整</h3>
+          </div>
+          <div class="process-step">
+            <h3>個別にご売買契約を締結</h3>
+          </div>
+        </div>
+        <p>
+          <strong
+            >※計画範囲の全ての方とのご売買契約が成立した場合のみ契約は有効となります。</strong
+          >
+        </p>
+        <p>
+          <strong
+            >※弊社または弊社の提携会社が直接購入しますので余計な手数料もかかりません。</strong
+          >
+        </p>
       </section>
 
       <!-- ご協力ください -->
@@ -197,6 +184,19 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <!-- 再開発を行う事で得られるメリット -->
+      <section>
+        <h2>再開発を行う事で得られるメリット</h2>
+        <ul>
+          <li>
+            建物の耐震化・安全性の向上により、防災機能を高め治安の良い街づくりに貢献する事が出来ます。
+          </li>
+          <li>
+            近隣の方々と併せて土地を売却する事で、敷地全体の資産価値が向上する可能性があり、その恩恵を受ける事が出来ます。
+          </li>
+        </ul>
       </section>
 
       <!-- 街全体としてのメリット -->
@@ -267,7 +267,7 @@
 
       <!-- 会社情報 -->
       <section class="company-info">
-        <h2>会社情報</h2>
+        <h2 style="color: #1a237e">会社情報</h2>
         <p><strong>東京都知事免許(2)第98820号</strong></p>
         <p><strong>株式会社ケイツーコーポレーション</strong></p>
         <p>〒101-0021 東京都千代田区外神田2-19-14 お茶の水ミワビル 1F</p>
