再開発ページ整理中

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -176,21 +176,18 @@
             style="
               display: flex;
               align-items: center;
-              justify-content: center;
-              gap: 2em;
+              gap: 1.5em;
               flex-wrap: wrap;
             "
           >
             <img
               src="gazou_saikaihatu/image_staff.png"
               alt="担当者のイラスト"
-              style="max-width: 150px"
+              style="max-width: 120px"
             />
-            <div>
-              <p>
-                近隣の方々を含めた判断が必要となるため、皆様のご意向の確認にご協力ください。ご協力にあたっては、近隣の皆様と概ねのスケジュールを合わせる必要がございます。
-              </p>
-            </div>
+            <p style="margin: 0">
+              近隣の方々を含めた判断が必要となるため、皆様のご意向の確認にご協力ください。ご協力にあたっては、近隣の皆様と概ねのスケジュールを合わせる必要がございます。
+            </p>
           </div>
         </div>
       </section>
