再開発ページ実装ver1

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               >メッセージ</a
             >
             <a
-              href="saikaihatu.html"
+              href="#redevelopment"
               class="text-gray-700 hover:text-blue-600 transition-colors"
               >再開発事業</a
             >
@@ -174,7 +174,7 @@
               >メッセージ</a
             >
             <a
-              href="saikaihatu.html"
+              href="#redevelopment"
               class="text-gray-700 hover:text-blue-600 transition-colors"
               >再開発事業</a
             >
@@ -490,6 +490,7 @@
 
     <!-- 再開発事業のお手伝い（新規追加セクション） -->
     <section
+      id="redevelopment"
       class="bg-blue-50 fade-in"
       style="padding-top: 5.5rem; padding-bottom: 5.5rem"
     >
