--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -20,13 +20,183 @@
       rel="stylesheet"
     />
 
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="common.css" />
     <link rel="stylesheet" href="saikaihatu.css" />
+
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              zen: ["Zen Kaku Gothic New", "sans-serif"],
+            },
+          },
+        },
+      };
+    </script>
+
+    <style>
+      body {
+        font-family: "Zen Kaku Gothic New", sans-serif;
+      }
+
+      .kokoro-font {
+        font-family: "Kokoro", cursive;
+      }
+
+      .kokoro-font strong {
+        font-weight: 300;
+      }
+
+      .fade-in {
+        opacity: 0;
+        transform: translateY(30px);
+        transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+      }
+
+      .fade-in.visible {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      .smooth-scroll {
+        scroll-behavior: smooth;
+      }
+
+      .header-shadow {
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .text-shadow {
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      }
+    </style>
   </head>
-  <body>
-    <!-- ヘッダー -->
-    <header class="redevelopment-header py-20">
+  <body class="font-zen smooth-scroll">
+    <!-- ヘッダー (Header) -->
+    <header
+      id="header"
+      class="fixed top-0 left-0 right-0 bg-white header-shadow z-50"
+    >
+      <nav class="container mx-auto px-4 py-4">
+        <div class="flex justify-between items-center">
+          <div class="text-xl font-bold text-gray-800">K2 Corporation</div>
+
+          <!-- PC メニュー -->
+          <div class="hidden md:flex space-x-8">
+            <a
+              href="index.html#top"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >トップ</a
+            >
+            <a
+              href="index.html#works"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >取引実績</a
+            >
+            <a
+              href="index.html#message"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >メッセージ</a
+            >
+            <a
+              href="#redevelopment"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >再開発事業</a
+            >
+            <a
+              href="index.html#access"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >アクセス</a
+            >
+            <a
+              href="index.html#gallery"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >オフィス</a
+            >
+            <a
+              href="index.html#contact"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >お問い合わせ</a
+            >
+          </div>
+
+          <!-- スマートフォン ハンバーガーメニュー -->
+          <div class="md:hidden">
+            <button id="menu-toggle" class="text-gray-700">
+              <svg
+                class="w-6 h-6"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+
+        <!-- スマートフォン メニュー -->
+        <div
+          id="mobile-menu"
+          class="md:hidden hidden bg-white border-t mt-4 py-4"
+        >
+          <div class="flex flex-col space-y-4">
+            <a
+              href="index.html#top"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >トップ</a
+            >
+            <a
+              href="index.html#works"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >取引実績</a
+            >
+            <a
+              href="index.html#message"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >メッセージ</a
+            >
+            <a
+              href="#redevelopment"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >再開発事業</a
+            >
+            <a
+              href="index.html#access"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >アクセス</a
+            >
+            <a
+              href="index.html#gallery"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >オフィス</a
+            >
+            <a
+              href="index.html#contact"
+              class="text-gray-700 hover:text-blue-600 transition-colors"
+              >お問い合わせ</a
+            >
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- 再開発ヘッダー -->
+    <header
+      id="redevelopment"
+      class="redevelopment-header py-20"
+      style="margin-top: 80px"
+    >
       <div class="container mx-auto px-4 text-center">
         <h1 class="text-4xl font-bold mb-8">再開発計画のご提案</h1>
         <img
@@ -305,5 +475,61 @@
         </p>
       </div>
     </footer>
+
+    <script>
+      // ハンバーガーメニュー
+      const menuToggle = document.getElementById("menu-toggle");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      menuToggle.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+
+      // スムーズスクロール
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute("href"));
+          if (target) {
+            const headerHeight = document.getElementById("header").offsetHeight;
+            const targetPosition = target.offsetTop - headerHeight;
+            window.scrollTo({
+              top: targetPosition,
+              behavior: "smooth",
+            });
+          }
+          // モバイルメニューを閉じる
+          mobileMenu.classList.add("hidden");
+        });
+      });
+
+      // フェードインアニメーション
+      const observerOptions = {
+        threshold: 0.1,
+        rootMargin: "0px 0px -50px 0px",
+      };
+
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("visible");
+          }
+        });
+      }, observerOptions);
+
+      document.querySelectorAll(".fade-in").forEach((el) => {
+        observer.observe(el);
+      });
+
+      // ヘッダーの背景変更（スクロール時）
+      window.addEventListener("scroll", () => {
+        const header = document.getElementById("header");
+        if (window.scrollY > 100) {
+          header.classList.add("bg-white", "header-shadow");
+        } else {
+          header.classList.remove("bg-white", "header-shadow");
+        }
+      });
+    </script>
   </body>
 </html>
